# time-allocator-core

./: .gitignore  LICENSE  README.md  pyproject.toml
src/time_allocator_core/: __init__.py  client.py  dates.py  tests.py
src/time_allocator_core/tests/: test_data.py  test_dicts.py  test_to_lf.py  tests.py
